expected/main/gens/primBitNot-neg-32.err
ERROR: "actual/main/gens/primBitNot-neg-32.lc", line 3
external not1K  {primBitNot  1K} :: Bit 1K  -> Bit 1K
         ^
No generated implementation: Argument value 1024 is too large; must be less than 1000

ERROR: "actual/main/gens/primBitNot-neg-32.lc", line 4
external not1G  {primBitNot  1G} :: Bit 1G  -> Bit 1G
         ^
No generated implementation: Argument value 1073741824 is too large; must be less than 1000

ERROR: Aborting after 2 previously reported errors

